# DM_FM_Trajectories

./: .gitignore  README.md  pipeline_generation_diversity.py  pyproject.toml
src/: evaluate.py  flyability_eval.py  generate.py  generate_jupiter.ipynb  main.py  merge_datasets.py  pipeline_evaluate_flyability.py  pipeline_generation_diversity.py  pipeline_transfer_learning.py  preprocess.py  train.py  train_evaluate_pipeline.py  train_optuna.py
src/configs/: config.yaml  config_fm.yaml  config_fm_lat.yaml  config_lat.yaml  config_perturb.yaml  config_size_fm_lat.yaml  config_timegan.yaml  dataset_landing.yaml  dataset_landing_transfer.yaml  dataset_opensky.yaml  tcvae_config.yaml
src/data/: OpenSky_viewer.ipynb  weather_data.ipynb
src/evaluation/: __init__.py  diversity.py  fidelity.py  flyability_eval.py  similarity.py  stat_metrics.py  time_series.py
src/evaluation/flyability_utils/: eval_logic.py
src/model/: AirDiffTraj.py  AirLatDiffTraj.py  AirTrajUnet.py  Traj_UNet.py  __init__.py  diffusion.py  flow_matching.py  generative.py
src/model/baselines/: __init__.py  open_ap.py  perturbation.py  timegan.py
src/model/tcvae/: __init__.py  tcvae.py  vae.py
src/utils/: EMA.py  __init__.py  condition_utils.py  data_utils.py  era5_data.py  helper.py  metar_utils.py  opensky_utils.py  plot_utils.py  train_utils.py  weather_utils.py
